<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">
    
   <ImageView
       android:id="@+id/cardaccount"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:src="@drawable/account" />

   <LinearLayout 
       android:id="@+id/accountUser"
       android:layout_below="@id/cardaccount"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:orientation="vertical"
       >
      <TextView 
          android:id="@+id/name" 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView 
          android:id="@+id/id" 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/> 
      <TextView 
          android:id="@+id/phone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>    
      </LinearLayout>
    
   <LinearLayout 
       android:id="@+id/layout_1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/accountUser"
       android:orientation="horizontal"
       android:layout_margin="3dp">
   	<TextView
	    android:id="@+id/username_1"
	    android:text="@string/username"
	    android:textSize="23sp"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content">"
	</TextView>
	<EditText 
	    android:id="@+id/user_1"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:hint="@string/user"
	    android:singleLine="true"
	    />       
   </LinearLayout>
   
   <LinearLayout 
       android:id="@+id/layout_2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/layout_1"
       android:orientation="horizontal"
       android:layout_margin="3dp">
   	<TextView
	    android:id="@+id/password_1"
	    android:text="@string/inputPassword"
	    android:textSize="23sp"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content">"
	</TextView>
	<EditText 
	    android:id="@+id/pass_1"
	    android:inputType="textPassword"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:hint="@string/password"
	    />       
   </LinearLayout>
   
   <Button
       android:id="@+id/login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/layout_2"
       android:layout_centerHorizontal="true"
       android:background="#DF6100"
       android:text="@string/login" />
   <CheckBox 
       android:id="@+id/remember"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/remember"
       android:layout_below="@id/layout_2"
       android:layout_alignBaseline="@id/login"
       />
   
   <TextView
       android:id="@+id/forget"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_toRightOf="@id/login"
       android:layout_below="@id/layout_2"
       android:layout_alignBaseline="@id/login"
       android:layout_alignRight="@id/layout_2"
       android:gravity="center"
       android:textColor="#0052EA"
       android:textSize="15sp"
       android:text="@string/forget"
       android:onClick="forgetPass"
       android:clickable="true"
       ></TextView>
</RelativeLayout>
