<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:clickable="true"
	    android:id="@+id/press1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:background="#D7D7D7">
	    <TextView 
	        android:text="@string/info_user"
	        android:layout_marginTop="6dp"
	        android:layout_marginBottom="6dp"
	        android:layout_marginLeft="6dp"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textSize="20sp"
	        />
	</LinearLayout>

	<LinearLayout 
	    android:id="@+id/info_layout1"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="5dp"
	        >
	        <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/uname"
	            />

	        <TextView
	            android:id="@+id/info_username"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:layout_marginRight="20dp"
	            android:text="@string/def" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="5dp"
	        >
	        <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phonenumber"
	            />

	        <TextView
	            android:id="@+id/info_phone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:layout_marginRight="20dp"
	            android:text="@string/def" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="5dp"
	        >
	        <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/mail"
	            />

	        <TextView
	            android:id="@+id/info_mail"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:layout_marginRight="20dp"
	            android:text="@string/def" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="5dp"
	        >
	        <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/id"
	            />

	        <TextView
	            android:id="@+id/info_id"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:layout_marginRight="20dp"
	            android:text="@string/def" />
	    </LinearLayout>
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/press2"
	    android:clickable="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:background="#D7D7D7">
	    <TextView 
	        android:text="@string/settings"
	        android:layout_marginTop="6dp"
	        android:layout_marginBottom="6dp"
	        android:layout_marginLeft="6dp"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textSize="20sp"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/info_layout2"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    >
	   <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="5dp"
	        >
	        <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/ways"
	            />
	    </LinearLayout>
	    
   		 <com.lwq.wallet.panel.MemberLayout 
        	android:orientation="horizontal" 
 	 	 	android:layout_width="match_parent" 
 	 	 	android:layout_height="30sp" 
 	 	 	android:layout_marginLeft="10dp"
 	 	 	android:layout_marginRight="10dp"
 	 	 	android:layout_marginTop="3dp"
        	>
	 	 	 <TextView android:layout_width="wrap_content" 
		     android:layout_height="wrap_content" 
		     android:text="@string/quickcard"
		 	 android:textSize="15sp" 
		 	 android:textColor="#000" 
		 	 android:paddingLeft="10sp" 
		 	 android:paddingTop="5sp" 
		 	 android:gravity="center"/>
	 	 	 <Spinner
	 	 	     android:id="@+id/quickspinner"
	 	 	     android:layout_weight="1"
	 	 	     android:gravity="right"
	 	 	     android:layout_width="wrap_content"
	 	 	     android:layout_height="wrap_content"
	 	 	     >
	 	 	 </Spinner>
    	</com.lwq.wallet.panel.MemberLayout>
    	
   		<com.lwq.wallet.panel.MemberLayout 
        	android:orientation="horizontal" 
 	 	 	android:layout_width="match_parent" 
 	 	 	android:layout_height="30sp" 
 	 	 	android:layout_marginLeft="10dp"
 	 	 	android:layout_marginRight="10dp"
 	 	 	android:layout_marginTop="3dp"
        	>
	 	 	 <TextView android:layout_width="wrap_content" 
		     android:layout_height="wrap_content" 
		     android:text="@string/yuzhi"
		 	 android:textSize="15sp" 
		 	 android:textColor="#000" 
		 	 android:paddingLeft="10sp" 
		 	 android:paddingTop="5sp" 
		 	 android:gravity="center"/>
	 	 	 <Spinner
	 	 	     android:id="@+id/quickspinner1"
	 	 	     android:layout_width="wrap_content"
	 	 	     android:layout_weight="1"
	 	 	     android:gravity="right"
	 	 	     android:layout_height="wrap_content"
	 	 	     >
	 	 	 </Spinner>
    	</com.lwq.wallet.panel.MemberLayout>
    	
   		<com.lwq.wallet.panel.MemberLayout 
        	android:orientation="horizontal" 
 	 	 	android:layout_width="match_parent" 
 	 	 	android:layout_height="30sp" 
 	 	 	android:layout_marginLeft="10dp"
 	 	 	android:layout_marginRight="10dp"
 	 	 	android:layout_marginTop="3dp"
        	>
	 	 	 <TextView android:layout_width="wrap_content" 
		     android:layout_height="wrap_content" 
		     android:text="@string/edu"
		 	 android:textSize="15sp" 
		 	 android:textColor="#000" 
		 	 android:paddingLeft="10sp" 
		 	 android:paddingTop="5sp" 
		 	 android:gravity="center"/>
	 	 	 <Spinner
	 	 	     android:id="@+id/quickspinner2"
	 	 	     android:layout_weight="1"
	 	 	     android:gravity="right"
	 	 	     android:layout_width="wrap_content"
	 	 	     android:layout_height="wrap_content"
	 	 	     >
	 	 	 </Spinner>
    	</com.lwq.wallet.panel.MemberLayout>
   		
   		<Switch 
   		    android:id="@+id/switchbutton"
   		    android:layout_marginTop="10dp"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:layout_gravity="right"
   		    />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/press3"
	    android:clickable="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:background="#D7D7D7">
	    <TextView 
	        android:text="@string/changepassword"
	        android:layout_marginTop="6dp"
	        android:layout_marginBottom="6dp"
	        android:layout_marginLeft="6dp"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textSize="20sp"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/info_layout3"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    >
		<EditText 
		    android:id="@+id/oldpassword"
		    android:inputType="textPassword"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/oldpass"
		    />
		<EditText 
		    android:id="@+id/newpassword"
		    android:inputType="textPassword"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/newpass"
		    />
		<EditText 
		    android:id="@+id/newpassword2"
		    android:inputType="textPassword"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/newpass"
		    />
		<Button 
		    android:id="@+id/password_change"
		    android:layout_width="wrap_content"
		    android:layout_height="30dp"
		    android:background="#DF6100"
		    android:text="@string/ok"
		    android:textSize="15sp"
		    android:layout_gravity="right"
		    android:layout_marginRight="15dp"
		    android:layout_marginBottom="5dp"
		    />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/press4"
	    android:clickable="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:background="#D7D7D7">
	    <TextView 
	        android:text="@string/reset"
	        android:layout_marginTop="6dp"
	        android:layout_marginBottom="6dp"
	        android:layout_marginLeft="6dp"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textSize="20sp"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/info_layout4"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    >
		<EditText 
		    android:id="@+id/info_reset_user"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/uname"
		    />
		<EditText 
		    android:id="@+id/info_reset_phone"
		    android:inputType="phone"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/phonenumber"
		    />
		<EditText 
		    android:id="@+id/info_reset_email"
		    android:inputType="textEmailAddress"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/mail"
		    />
		<Button 
		    android:id="@+id/reset_change"
		    android:layout_width="wrap_content"
		    android:layout_height="30dp"
		    android:background="#DF6100"
		    android:text="@string/ok"
		    android:textSize="15sp"
		    android:layout_gravity="right"
		    android:layout_marginRight="15dp"
		    android:layout_marginBottom="5dp"
		    />
	</LinearLayout>
</LinearLayout>
