<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:textSize="20sp"
        android:layout_margin="10dp"
        >
        </TextView>
    
    <com.lwq.wallet.panel.MemberLayout 
         android:orientation="horizontal" 
 	 	 android:layout_width="match_parent" 
 	 	 android:layout_height="40sp" 
 	 	 android:layout_marginLeft="10dp"
 	 	 android:layout_marginRight="10dp"
 	 	 android:layout_marginTop="3dp"
        >
        <EditText 
        android:id="@+id/message_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
	    android:layout_marginTop="5sp"
	  	android:layout_marginRight="10sp" 
        />       
    </com.lwq.wallet.panel.MemberLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmnumber"
        android:textSize="20sp"
        android:layout_margin="10dp"
        >
    </TextView>
    
    <com.lwq.wallet.panel.MemberLayout 
         android:orientation="horizontal" 
 	 	 android:layout_width="match_parent" 
 	 	 android:layout_height="40sp" 
 	 	 android:layout_marginLeft="10dp"
 	 	 android:layout_marginRight="10dp"
 	 	 android:layout_marginTop="3dp"
        >
        <EditText 
        android:id="@+id/message_confirm"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:singleLine="true"
	    android:layout_marginTop="5sp"
	  	android:layout_marginRight="10sp" 
        /> 
        <Button
	     android:id="@+id/message_get_confirm"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/getconfirm"
	     android:textSize="12sp" />
    </com.lwq.wallet.panel.MemberLayout>
    <Button
        android:id="@+id/message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:background="#DF6100"
        android:text="@string/ok" />

</LinearLayout>
